--- a/style.css
+++ b/style.css
@@ -76,6 +76,17 @@ a {text-decoration: none;}
   margin: 0px;
   font-family: 'PT Sans', sans-serif;
 	}
+.body-LOM {
+  background-image: url("images/bg4.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #fff;
+  background-size: cover;
+  padding: 0px;
+  margin: 0px;
+  font-family: 'PT Sans', sans-serif;
+	}
 .main-body {
 	width: 950px;
 	min-height: 100vh;
