--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,17 @@ a {text-decoration: none;}
   margin: 0px;
   font-family: 'PT Sans', sans-serif;
 	}
+.body-P4 {
+  background-image: url("../images/bg5.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #fff;
+  background-size: cover;
+  padding: 0px;
+  margin: 0px;
+  font-family: 'PT Sans', sans-serif;
+	}
 .main-body {
 	width: 950px;
 	min-height: 100vh;
