--- a/css/downloads.css
+++ b/css/downloads.css
@@ -2,7 +2,7 @@
   background-color: #616161;
   border-radius: 5px 5px 5px 5px;
   height: auto;
-  font-size: 120%;
+  font-size: 160%;
   line-height: 20px;
   padding: 10px 10px 10px 25px;
 	border: 1px solid rgba(0,0,0,0.25);
@@ -16,12 +16,13 @@
 	margin-bottom: 10px;
 	}
 .download-version {
+    color: darkmagenta;
 	display: inline-block;
 	margin-bottom: 10px;
 	min-width: 300px;
 	line-height: 50px;
 	clear: both;
-	font-size: 16px;
+	font-size: 140%;
 	}
 .download-buttons {display: inline-block; float:right; height: 40px; padding-top: 10px}
 .download-buttons > a > div {
@@ -59,6 +60,6 @@
 	background-color: #666;
 	}
 .download-changelog {
-	font-size: 14px;
+	font-size: 110%;
 	margin-bottom: 10px;
 	}
